16_subseq/grade.txt
Grading at Mon Sep 30 17:30:13 UTC 2019
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:6:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return NULL;
            ^
maxSeq.c:20:3: error: expected ‘;’ before ‘}’ token
   }
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
